<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.LoginActivity">

	<TextView
		android:id="@+id/tv_title"
		style="?attr/textAppearanceDisplayMedium"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/margin_medium"
		android:text="@string/app_name"
		app:layout_constraintBottom_toTopOf="@id/ed_login_email"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<com.promecarus.storyapp.custom.edittext.EditTextEmail
		android:id="@+id/ed_login_email"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_edit_text"
		android:layout_marginHorizontal="@dimen/margin_horizontal_edit_text"
		android:layout_marginBottom="@dimen/margin_medium"
		app:layout_constraintBottom_toTopOf="@id/ed_login_password"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="TextContrastCheck" />

	<com.promecarus.storyapp.custom.edittext.EditTextPassword
		android:id="@+id/ed_login_password"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_edit_text"
		android:layout_marginHorizontal="@dimen/margin_horizontal_edit_text"
		android:imeOptions="actionDone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="TextContrastCheck" />

	<Button
		android:id="@+id/btn_login"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/margin_horizontal_button"
		android:layout_marginTop="@dimen/margin_medium"
		android:enabled="false"
		android:text="@string/login"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

	<Button
		android:id="@+id/btn_register"
		style="?attr/materialButtonOutlinedStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/margin_horizontal_button"
		android:layout_marginTop="@dimen/margin_medium"
		android:text="@string/register"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/btn_login" />

	<ProgressBar
		android:id="@+id/progress_bar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
