<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.SettingActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/app_bar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toTopOf="parent">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/top_app_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="?attr/actionBarSize"
			app:navigationIcon="@drawable/ic_back"
			app:title="@string/setting"
			app:titleTextAppearance="?attr/textAppearanceTitleMedium" />
	</com.google.android.material.appbar.AppBarLayout>

	<com.promecarus.storyapp.custom.edittext.EditTextNumber
		android:id="@+id/ed_size"
		android:layout_width="match_parent"
		android:layout_height="@dimen/height_edit_text"
		android:layout_marginHorizontal="@dimen/margin_horizontal_edit_text"
		android:layout_marginTop="@dimen/margin_medium"
		app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
		tools:ignore="TextContrastCheck" />

	<com.google.android.material.switchmaterial.SwitchMaterial
		android:id="@+id/sm_with_location"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/margin_horizontal_button"
		android:layout_marginTop="@dimen/margin_medium"
		android:text="@string/with_location"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/ed_size"
		app:thumbTint="?attr/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>
